# filewatcher

./: .gitignore  CMakeLists.txt  watcher.py
assets/models/: newfile.yml
assets/scenes/: sdfdf.yml
assets/shaders/: default.glsl
cpp/: CMakeLists.txt  CMakeSettings.json  main  main.cpp
cpp/assets/models/: model.yml
python/: CMakeLists.txt  main.cpp  watcher.py
python/assets/materials/: newfile.txt
